v1.2.0
-Ported mod to 1.4.4
-Cleaned up the code
-Made paintings in Star Merchant Shop more randomised
-Fixed broken Star Merchant dialogue lines
-Added old Star Merchant sprite as a Shimmered variant
-Added Otherworld Core
-Added 6 new materials, used to craft Otherworld Core
-Removed Tang Suit, Mythical Dog & Tang Yuan Vanity Sets. They are now part of Consolaria mod as I decided they better fit there as special rewards for Chinese New Year event instead of being Mythical Vanity sets.
-Reduced iFlytek Disc damage from 12 to 10
-Updated description